<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">MySecurity</string>
    <string name="ayuda">HELP</string>
    <string name="compartir_ubicacion">SHARE LOCATION</string>
    <string name="atravesando_zona">CROSSING ZONE...</string>
    <string name="grabar">RECORD</string>
    <string name="sonido_flash">SOUND AND FLASH</string>
    <string name="mapa">MAP</string>
    <string name="set_time">Set time (minutes)</string>
    <string name="boton_comenzar">Start</string>
    <string name="llamando_a">Calling to</string>
    <string name="emergencias">EMERGENCY</string>
    <string name="cinco_segundos">in 5 seconds...</string>
    <string name="cancelar">Cancel</string>
    <string name="cuenta">Counting down:</string>
    <string name="pulsacion">Touch if everything is OK</string>
    <string name="video_audio">Video and audio</string>
    <string name="audio">Audio</string>
    <string name="flash">Flash</string>
    <string name="sonido">Sound</string>
    <string name="anadir_sonido">Add sound</string>
    <string name="anadir_contacto">Add emergency contact</string>
    <string name="notificaciones">Notifications</string>
    <string name="numero_emergencias">Emergency number</string>
    <string name="cerrar_sesion">Log out</string>
    <string name="iniciar_sesion">Sign in</string>
    <string name="crear_cuenta">Create account</string>
    <string name="usuario">User</string>
    <string name="contrasena">Password</string>
    <string name="bienvenida">WELCOME</string>
    <string name="nombre">Name:</string>
    <string name="correo_electronico">Email address:</string>
    <string name="numero_telefono">Phone number:</string>
    <string name="inicio">START</string>
    <string name="rutas">ROUTES</string>
    <string name="contactos_emergencia">Emergency contacts: </string>
    <string name="compartir">Share</string>
    <string name="insertar_tiempo">Duration in minutes</string>
    <string name="detener_grabacion">Stop record</string>
    <string name="añadir_marcador">Add marker</string>
    <string name="ver_ubicaiones">See ubications</string>
    <string name="olvidar_ctr">Forgot password?</string>
    <string name="registro">Sign up</string>
    <string name="correo">Email address</string>
    <string name="repetir_ctr">Repeat password</string>
    <string name="telefono">Phone number</string>
    <string name="registrarse">Sign up!</string>
    <string name="confirmacion">Everything is ok!</string>
    <string name="parar">Pause</string>
    <string name="editar_emergencias">Edit the emergency number:</string>
    <string name="nuevo_numero">New number</string>
    <string name="editar">Edit</string>
    <string name="compartir_ubi">SHARE UBICATION</string>
    <string name="grabarr">RECORD</string>
    <string name="duracion">Duration in minutes:</string>
    <string name="bateria">Share battery percentage? </string>
    <string name="añadir">Add</string>
    <string name="descipcion">Description</string>
    <string name="tipoMarcador">Select marker type:</string>
    <string name="editarNEmergencias">EDIT EMERGENCY NUMBER </string>
    <string name="linterna">FLASH</string>
    <string name="info_marcador">Marker information</string>
    <string name="error_flash">The device doesnt have flash unit</string>
    <string name="pausa">Pause</string>
    <string name="empezar">Start</string>
    <string name="aceptar">Acept</string>
    <string name="ubi_correct">Location sharing was succeed</string>

</resources>