<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@id/anadirContactoFragment"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_person_add_24"
        android:title="@string/anadir_contacto"/>
    <item
        android:id="@+id/notificacionesFragment"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_notifications_24"
        android:title="@string/notificaciones"/>
    <item
        android:id="@+id/numeroEmergenciasFragment"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_emergency_24"
        android:title="@string/numero_emergencias"/>
    <item
        android:id="@id/iniciarSesionFragment"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_logout_24"
        android:title="@string/cerrar_sesion"/>

</menu>