<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@id/principalFragment">
    <fragment
        android:id="@+id/principalFragment"
        android:name="com.example.mysecurity.PrincipalFragment"
        android:label="@string/inicio">
        <action
            android:id="@+id/action_principalFragment_to_setAtravesarZonaFragment"
            app:destination="@id/setAtravesarZonaFragment" />
        <action
            android:id="@+id/action_principalFragment_to_mapsFragment"
            app:destination="@id/mapsFragment" />
        <action
            android:id="@+id/action_principalFragment_to_ayudaFragment"
            app:destination="@id/ayudaFragment" />
        <action
            android:id="@+id/action_principalFragment_to_grabarFragment"
            app:destination="@id/grabarFragment" />
        <action
            android:id="@+id/action_principalFragment_to_sonidoFlashFragment"
            app:destination="@id/sonidoFlashFragment" />
        <action
            android:id="@+id/action_principalFragment_to_compartirUbicacionFragment"
            app:destination="@id/compartirUbicacionFragment" />
    </fragment>
    <fragment
        android:id="@+id/setAtravesarZonaFragment"
        android:name="com.example.mysecurity.SetAtravesarZonaFragment"
        android:label="@string/atravesando_zona" >
        <action
            android:id="@+id/action_setAtravesarZonaFragment_to_atravesandoZonaFragment"
            app:destination="@id/atravesandoZonaFragment" />
    </fragment>
    <fragment
        android:id="@+id/atravesandoZonaFragment"
        android:name="com.example.mysecurity.AtravesandoZonaFragment"
        android:label="@string/atravesando_zona" >
        <argument
            android:name="minutos"
            app:argType="integer" />
    </fragment>
    <fragment
        android:id="@+id/mapsFragment"
        android:name="com.example.mysecurity.MapsFragment"
        android:label="@string/mapa"
        tools:layout="@layout/fragment_maps" />
    <fragment
        android:id="@+id/ayudaFragment"
        android:name="com.example.mysecurity.AyudaFragment"
        android:label="@string/ayuda" >
        <action
            android:id="@+id/action_ayudaFragment_to_principalFragment"
            app:destination="@id/principalFragment" />
    </fragment>
    <fragment
        android:id="@+id/grabarFragment"
        android:name="com.example.mysecurity.GrabarFragment"
        android:label="@string/grabar" />
    <fragment
        android:id="@+id/sonidoFlashFragment"
        android:name="com.example.mysecurity.SonidoFlashFragment"
        android:label="@string/sonido_flash" />
    <fragment
        android:id="@+id/anadirContactoFragment"
        android:name="com.example.mysecurity.AnadirContactoFragment"
        android:label="@string/anadir_contacto" />
    <fragment
        android:id="@+id/iniciarSesionFragment"
        android:name="com.example.mysecurity.IniciarSesionFragment"
        android:label="@string/iniciar_sesion" >
        <action
            android:id="@+id/action_iniciarSesionFragment_to_principalFragment"
            app:destination="@id/principalFragment" />
    </fragment>
    <fragment
        android:id="@+id/compartirUbicacionFragment"
        android:name="com.example.mysecurity.CompartirUbicacionFragment"
        android:label="CompartirUbicacionFragment" />
</navigation>