<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="usuario"
            type="com.example.mysecurity.Usuario" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:weightSum="30">

            <Button
                android:id="@+id/boton_ayuda"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:backgroundTint="#FF0000"
                android:gravity="center"
                android:text="@string/ayuda"
                android:textSize="50dp"
                android:layout_weight="15"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"/>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="5"
                android:weightSum="2"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp">

                <Button
                    android:id="@+id/boton_compartir_ubicacion"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text="@string/compartir_ubicacion"
                    android:textSize="20dp"
                    android:layout_weight="1"
                    android:layout_marginRight="5dp"/>

                <Button
                    android:id="@+id/boton_atravesar_zona"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text="@string/atravesando_zona"
                    android:textSize="20dp"
                    android:layout_weight="1"
                    android:layout_marginLeft="5dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="5"
                android:orientation="horizontal"
                android:weightSum="2"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp">

                <Button
                    android:id="@+id/boton_grabar"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:text="@string/grabar"
                    android:textSize="20dp"
                    android:layout_width="0dp"
                    android:layout_marginRight="5dp"/>

                <Button
                    android:id="@+id/boton_sonido_flash"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/sonido_flash"
                    android:textSize="20dp"
                    android:layout_marginLeft="5dp"/>
            </LinearLayout>

            <Button
                android:id="@+id/boton_mapa"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="5"
                android:layout_alignParentBottom="true"
                android:text="@string/mapa"
                android:textSize="20dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"/>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>