<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/editarEmergencias"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="8dp"
            android:layout_width="wrap_content"
            android:text="@string/editar_emergencias"
            android:textColor="@color/purple_500"
            android:textSize="40sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emergenciasError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp">

            <EditText
                android:id="@+id/enterEmergencias"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nuevo_numero"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/buttonConfirmarEdit"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/editar"
            android:layout_marginTop="14dp"/>

    </LinearLayout>
</layout>
