<?xml version="1.0" encoding="utf-8"?>
<layout>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_vertical">



            <Button
                android:id="@+id/boton_flash"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/flash"
                android:layout_gravity="center_horizontal"/>

            <Button
                android:id="@+id/boton_sonido"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sonido"
                android:layout_gravity="center_horizontal"/>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/new_card_fab"
                style="@style/Widget.Design.FloatingActionButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginRight="10dp"
                android:src="@drawable/ic_baseline_add_circle_24"
                android:contentDescription="@string/anadir_sonido" />



        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>