<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:id="@+id/editMinutos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/atravesando_zona"
            android:textColor="@color/purple_500"
            android:textSize="16sp"/>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/set_time"
            android:layout_marginHorizontal="50dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/minutos"
                android:text="10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>



        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/card_edit_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center">

            <Button
                android:id="@+id/boton_confirmar"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/purple_500"
                android:textColor="@color/white"
                android:text="@string/boton_comenzar" />

        </com.google.android.material.button.MaterialButtonToggleGroup>
    </LinearLayout>
</layout>